# concord

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  PLAN.md  README.md  SELF_CONTAINMENT_REPORT.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  fb2p.md  install.sh  instructions_inbox.md  naming-brainstorm.md  v2_plan.md
.github/workflows/: build-dendrite-windows.yml  build-tuwunel-windows.yml  ci.yml  release.yml  windows-build.yml
.orrch/: assess_report_2026-04-24-1931.md  audit_findings_step2_3.md
branding/: BRAND.md  generate_favicons.py
client/: MONETIZATION_PROPOSAL.md  NATIVE_BUILD.md  index.html  package-lock.json  package.json  vite.config.ts
config/: Caddyfile  Caddyfile.dev  coturn-entrypoint.sh  discord-bridge.env.example  livekit.yaml  nginx.conf  turnserver.conf  tuwunel.toml
discord-voice-bridge/: package-lock.json  package.json
docs/: federation-reachability-diagnosis.md  openclaw_harness_inspection.md  orrtellite_subgroups_justification.md  visual_code_editor_recommendation.md
scripts/: build_androidtv_check.sh  build_linux_native.sh  build_tvos_native.sh  lint_config_coherence.py  migrate-federation-config.sh  verify_windows_bundle.sh
server/: config.py  database.py  main.py  models.py  pytest.ini  requirements-dev.txt  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tvos/: README.md
v1/: docker-compose.yml
v2/: CLAUDE.md  Cargo.toml
v2/crates/concord-daemon/: Cargo.toml
v2/crates/concord-daemon/src/: admin.rs  config.rs  main.rs
web/: Dockerfile  Dockerfile.dev
(+322 files in other folders)
